# limbus_translate

./: .ai-workspace-template.json  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
artifacts/localize-9184302e/: README.md  localize-translation.patch  summary.json  translations.json
config/: length-policy.sample.json  scan-policy.sample.json
data/state/: README.md  localize-reviewed-9184302e.json
docs/: README.md
docs/agent/: README.md  context.md  decisions.md  glossary.md  handoff.md
docs/design/: README.md  design-system.md  ui-guidelines.md
docs/lore/: README.md  world.md
docs/product/: README.md  prd.md  roadmap.md
docs/research/: README.md  translation-framework.md
docs/tech/: README.md  architecture.md  localize-data-study.md  operations.md
docs/test/: README.md  (+1 more)
limbus_translate/: __init__.py  cli.py  context.py  evaluation.py  formatting.py  glossary.py  json_paths.py  localize.py  lore.py  memory.py  providers.py  qa.py  review.py  scanner.py  state.py  terms.py  translation_cache.py  translator.py
scripts/: apply-current-model-review.sh  apply-current-term-review.sh  check-provider-env.sh  compare-current-models.sh  finalize-current-localize-review.sh  prepare-current-localize-review.sh  prepare-current-model-eval.sh  publish-current-localize-artifact.sh  reproduce-current-localize.sh  validate-docs.sh
tests/: test_context.py  test_evaluation.py  test_glossary.py  test_localize.py  test_lore.py  test_memory.py  test_providers.py  test_qa.py  test_review.py  test_scanner.py  test_state.py  test_terms.py  test_translator.py
(+16 files in other folders)
