[project]
name = "limbus-translate"
version = "0.1.0"
description = "Incremental Korean-to-Chinese translation tooling for Limbus Company localization JSON."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
test = ["pytest>=8.0.0"]

[project.scripts]
limbus-translate = "limbus_translate.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
